# buff

./: .gitmodules  CMakeLists.txt  build.bat  build.sh  out.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: main.glsl
src/: buf.c  buf.h  config.h  glx.c  glx.h  impl.c  main.c  rope.c  uix.c  uix.h  zxc.h
src/editor/: buffer.c  buffer.h  editor.h  gap.h
src/math/: ortho.c  ortho.h  utf32.c
src/renderer/: font.h  framebuffer.c  framebuffer.h  shader.h  texture.h
src/ui/: ui.c  ui.h
src1/: core.h  main.c
src1/editor/: editor.c  gap.c  io.c  io.h
src1/input/: input.h
src1/math/: utf32.h
src1/renderer/: font.c  renderer.c  renderer.h  shader.c
src3/: main.c
